--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="startScreen">
-        <h2>Виберіть рівень складності:</h2>
+        <h2>Select the difficulty level:</h2>
         <select id="difficulty">
             <option value="">-- Select a level --</option>
             <option value="easy">Low</option>
